Customized tempalate with Bootstrap
customized layout with Bootstrap

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,12 +2,40 @@
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="UTF-8">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-  </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="{{ site.description }}">
+    <link rel="stylesheet" type="text/css" href="{{ '/assets/bundle.css' | prepend: site.baseurl }}">
+    <style>
+      .carousel-item {
+        height: 100vh;
+        min-height: 300px;
+        background: no-repeat center center scroll;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+      }
+    </style>
+    <script type="text/javascript" src="{{ '/assets/bundle.js' | prepend: site.baseurl }}"></script>
+    <link rel="icon" href="{{ site.logo }}">
+    <title>{{ page.title }}</title>
+    </head>
   <body>
+    <header>      
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container"><a class="navbar-brand" href="#">ZSpa</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item active"><a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a></li>
+              {% for item in page.nav %}
+              <li class="nav-item"><a class="nav-link" href="{{ item | prepend: site.baseurl }}">{{ item }}</a></li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
+      </nav>
     <section class="page-header">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
