Added Child Layout
converted Bootstrap image gallery to child layout

--- a/_layouts/igal.html
+++ b/_layouts/igal.html
@@ -1,3 +1,6 @@
+---
+layout: default
+---
 <div class="album text-muted">
   <div class="container">
     <div class="row">
@@ -10,4 +13,9 @@
         </div>
       {% endfor %}
       </div>
+      <section class="row">
+        {{ content }}
+      </section>
     </div>
+
+  
