--- a/_layouts/igal.html
+++ b/_layouts/igal.html
@@ -9,20 +9,20 @@ layout: default
 
         <div class="row">
           <div class="card">
-            <img data-src="assets/img/gallery/rose1.jpg" alt="Card image cap">
+            <img data-src="/zspa/assets/img/gallery/rose1.jpg" alt="Card image cap">
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           </div>
           <div class="card">
-            <img data-src="assets/img/gallery/rose2.jpg" alt="Card image cap">
+            <img data-src="/assets/img/gallery/rose2.jpg" alt="Card image cap">
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           </div>
           <div class="card">
-            <img data-src="assets/img/gallery/rose3.jpg" alt="Card image cap">
+            <img data-src="zspa78/zspa/assets/img/gallery/rose3.jpg" alt="Card image cap">
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           </div>
 
           <div class="card">
-            <img data-src="assets/img/gallery/rose4.jpg" alt="Card image cap">
+            <img data-src="https://github.com/zspa78/zspa/assets/img/gallery/rose4.jpg" alt="Card image cap">
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           </div>
           <div class="card">
