Updated body tag style attributes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     
   </head>
-  <body style="background-color: {{ page.color }}">
+  <body style="background-color:{{ page.bgColor }}; color:{{ page.color }};">
     <header>
       <div class="inner">
         <a href="{{ '/' | absolute_url }}">
